syntax = "proto3";
package weave.works.profiles.v1;
option go_package = "github.com/weaveworks/profiles";

service ProfilesService {
    // Get will return a specific profile from the catalog
    rpc Get(GetRequest) returns (GetResponse) {}
    // GetWithVersion will return a specific profile from the catalog
    rpc GetWithVersion(GetWithVersionRequest) returns (GetWithVersionResponse) {}
    // ProfilesGreaterThanVersion returns all profiles which are of a greater version for a given profile with a version.
    rpc ProfilesGreaterThanVersion(ProfilesGreaterThanVersionRequest) returns (ProfilesGreaterThanVersionResponse) {}
    // Search will return a list of profiles which match query
    rpc Search(SearchRequest) returns (SearchResponse) {}
}

// GetRequest defines parameters for the Get endpoint.
message GetRequest{

}

// GetResponse defines response parameters for Get endpoint.
message GetResponse{
    string tag = 1;
    string catalog_source = 2;
    string url = 3;

}

message ProfileCatalogEntry {

}

message ProfileCatalogDescription {

}

// GetWithVersionRequest defines request parameters for GetWithVersion endpoint.
message GetWithVersionRequest{}

// GetWithVersionResponse defines response parameters for GetWithVersion endpoint.
message GetWithVersionResponse{}

// ProfilesGreaterThanVersionRequest defines request parameters for ProfilesGreaterThanVersion endpoint.
message ProfilesGreaterThanVersionRequest{}

// ProfilesGreaterThanVersionResponse defines response parameters for ProfilesGreaterThanVersion endpoint.
message ProfilesGreaterThanVersionResponse{}

// SearchRequest defines request parameters for Search endpoint.
message SearchRequest{}

// SearchResponse defines response parameters for Search endpoint.
message SearchResponse{}
